--- a/docs/content/col_project.html.md.erb
+++ b/docs/content/col_project.html.md.erb
@@ -8,10 +8,16 @@ PXF supports column projection, and it is always enabled. With column projection
 
 Column projection is automatically enabled for the `pxf` external table protocol. PXF accesses external data sources using different connectors, and column projection support is also determined by the specific connector implementation. The following PXF connector and profile combinations support column projection on read operations:
 
-- PXF Hive Connector, `HiveORC` profile
-- PXF JDBC Connector, `Jdbc` profile
-- PXF Hadoop and Object Store Connectors, `hdfs:parquet`, `adl:parquet`, `gs:parquet`,`s3:parquet`, and `wasbs:parquet` profiles
-- PXF S3 Connector using Amazon S3 Select service, `s3:parquet` and `s3:text` profiles
+| Data Source | Connector | Profile(s) |
+|-------------|---------------|---------|
+| External SQL database | JDBC Connector | Jdbc |
+| Hive | Hive Connector | HiveORC, HiveVectorizedORC |
+| Hadoop | HDFS Connector | hdfs:parquet |
+| Amazon S3 | S3-Compatible Object Store Connectors | s3:parquet |
+| Amazon S3 using S3 Select | S3-Compatible Object Store Connectors | s3:parquet, s3:text |
+| Google Cloud Storage | GCS Object Store Connector | gs:parquet |
+| Azure Blob Storage | Azure Object Store Connector | wasbs:parquet |
+| Azure Data Lake | Azure Object Store Connector | adl:parquet |
 
 **Note:** PXF may disable column projection in cases where it cannot successfully serialize a query filter; for example, when the `WHERE` clause resolves to a `boolean` type.
 
