--- a/docs/content/install_java.html.md.erb
+++ b/docs/content/install_java.html.md.erb
@@ -4,8 +4,6 @@ title: Installing Java for PXF
 
 PXF is a Java service. It requires a Java 8 or Java 11 installation on each Greenplum Database host.
 
-*If an appropriate version of Java is already installed on each Greenplum Database host, you need not perform the procedure in this topic.*
-
 
 ## <a id="prereq"></a>Prerequisites
 
@@ -21,31 +19,48 @@ Perform the following procedure to install Java on the master, standby master, a
     $ ssh gpadmin@<gpmaster>
     ```
 
-2. Create a text file that lists your Greenplum Database standby master host and segment hosts, one host name per line. For example, a file named `gphostfile` may include:
+2. Determine the version(s) of Java installed on the system:
 
     ``` pre
-    mstandby
-    seghost1
-    seghost2
-    seghost3
+    gpadmin@gpmaster$ rpm -qa | grep java
     ```
 
-3. Install Java on the master, standby master, and on each Greenplum Database segment host, and then set up the Java environment on each host.
+3. If the system does not include a Java version 8 or 11 installation, install one of these Java versions on the master, standby master, and on each Greenplum Database segment host.
 
-    1. Install the Java package. For example, to install Java version 8:
+    1. Create a text file that lists your Greenplum Database standby master host and segment hosts, one host name per line. For example, a file named `gphostfile` may include:
+
+        ``` pre
+        gpmaster
+        mstandby
+        seghost1
+        seghost2
+        seghost3
+        ```
+    2. Install the Java package on each host. For example, to install Java version 8:
 
         ``` shell
-        gpadmin@gpmaster$ sudo yum -y install java-1.8.0-openjdk-1.8.0*
         gpadmin@gpmaster$ gpssh -e -v -f gphostfile sudo yum -y install java-1.8.0-openjdk-1.8.0*
         ```
 
-    2. Identify the Java base install directory. Update the `gpadmin` user's `.bashrc` file on each host to include this `$JAVA_HOME` setting if it is not already present. For example, if you installed Java 8:
+4. Identify the Java 8 or 11 `$JAVA_HOME` setting for PXF. For example:
 
-        ``` shell
-        gpadmin@gpmaster$ echo 'export JAVA_HOME=/usr/lib/jvm/java-1.8.0-openjdk-1.8.0.x86_64/jre' >> /home/gpadmin/.bashrc
-        gpadmin@gpmaster$ gpssh -e -v -f gphostfile "echo 'export JAVA_HOME=/usr/lib/jvm/java-1.8.0-openjdk-1.8.0.x86_64/jre' >> /home/gpadmin/.bashrc"
-        ```
+    If you installed Java 8:
 
-        If you installed Java 11, `JAVA_HOME` may be `/usr/lib/jvm/java-11-openjdk-11.0.4.11-0.el7_6.x86_64`.
+    ``` shell
+    JAVA_HOME=/usr/lib/jvm/java-1.8.0-openjdk-1.8.0.x86_64/jre
+    ```
 
-**Note**: If the superuser selected the newly-installed Java alternative as the system default, `JAVA_HOME=/usr/lib/jvm/jre`.
+    If you installed Java 11:
+    
+    ``` shell
+    JAVA_HOME=/usr/lib/jvm/java-11-openjdk-11.0.4.11-0.el7_6.x86_64
+    ```
+
+    If the superuser configures the newly-installed Java alternative as the system default:
+
+    ``` shell
+    JAVA_HOME=/usr/lib/jvm/jre
+    ```
+
+5. Note the `$JAVA_HOME` setting; you provide this value when you initialize PXF.
+
