--- a/docs/content/cfghostport.html.md.erb
+++ b/docs/content/cfghostport.html.md.erb
@@ -40,7 +40,7 @@ Perform the following procedure to configure the PXF agent host and/or port numb
         ```
     4. Save the file and exit the editor.
 
-3. Restart Greenplum Database as described in [Restarting Greenplum Database](../admin_guide/managing/startstop.html#task_gpdb_restart).
+3. Restart Greenplum Database as described in [Restarting Greenplum Database](https://gpdb.docs.pivotal.io/latest/admin_guide/managing/startstop.html#task_gpdb_restart) in the Greenplum Documentation.
 
 4. Restart PXF on each Greenplum Database segment host as described in [Restarting PXF](cfginitstart_pxf.html#restart_pxf).
 
